# RaytracerViewer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
backend/: main.py
bindings/: bindings.cpp
include/: Application.h  RaytracerAPI.h  Screen.h  ScreenTexture.h  Texture.h  UseImGui.h
include/Gui/: MenuGui.h  PropertiesGui.h  UseImGui.h  ViewportGui.h
include/Threads/: ThreadSafeQueue.h
include/io/: Keyboard.h
src/: Application.cpp  Keyboard.cpp  MenuGui.cpp  PropertiesGui.cpp  RaytracerAPI.cpp  RaytracerViewer.cpp  Screen.cpp  ScreenTexture.cpp  Texture.cpp  UseImGui.cpp  ViewportGui.cpp  main.cpp
